# cal-proj-t08g01

./: .gitignore  CMakeLists.txt  Graph.h  MealBasket.h  README.md  Report.docx  main.cpp  proj.py
Pseudocodigo/: ff.aux  ff.tex
docs/: Analise Empirica.xlsx  Análise Empirica.xlsx  Report.docx  ~$Report.docx
src/: Graph.cpp  Graph.h  MealBasket.cpp  MealBasket.h  PapaRica.cpp  PapaRica.h  ProblemGraph.cpp  ProblemGraph.h  README.txt  Vehicle.cpp  Vehicle.h  Viewer.cpp  main.cpp
src/Components/: MealBasket.h  Vehicle.cpp  Vehicle.h
